common: Always collect locales from the directory

Even if those locales do not exist in the locale-archive file,
their definition could be in the locale directories. The glibc
will look in directories as well when the locale-archive doesn't
contain it, so both behaviours match.

See also:
http://repo.or.cz/w/glibc.git/blob/HEAD:/locale/findlocale.c#l62

https://bugzilla.gnome.org/show_bug.cgi?id=660725